finish4.3~4.7 login.html

--- a/login.html
+++ b/login.html
@@ -3,28 +3,34 @@
     <head>
         <meta charset="UTF-8">
         <title>登陆页面</title>
+        <base href="http://localhost:63342/pj/browser.html?_ijt=k4biajrc272rl3pqfr098hkss7\">
+        <link rel="stylesheet" type="text/css" href="css/base.css">
+        <link rel="stylesheet" type="text/css" href="css/footer.css">
+        <link rel="stylesheet" type="text/css" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
+
+        <link rel="stylesheet" type="text/css" href="css/login.css">
     </head>
     <body>
-        <div>
+        <img src="img/logo.png" alt="logo">
+        <div class="mainPart">
             <form action="home.html" method="post">
                 <div>
                     <p>
                         <label>
-                            用户名：
                             <br>
-                            <input type="text">
+                            <input type="text" placeholder="账号">
                         </label>
                     </p>
                     <p>
                         <label>
-                            密码：
                             <br>
-                            <input type="password">
+                            <input type="password" placeholder="密码">
                         </label>
                     </p>
                     <p>
+                        <br>
                         <label>
-                            <input type="submit" value="登录">
+                            <button type="submit">立即登录</button>
                         </label>
                     </p>
 
@@ -33,6 +39,10 @@
 
             </form>
         </div>
+        <div>
+            <a href="register.html" class="line">创建新的账户</a>
+        </div>
+
         <!--页脚...-->
 
     </body>
