--- a/src/login.html
+++ b/src/login.html
@@ -3,15 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>登陆页面</title>
-        <base href="http://localhost:63342/pj/browser.html?_ijt=k4biajrc272rl3pqfr098hkss7\">
-        <link rel="stylesheet" type="text/css" href="css/base.css">
-        <link rel="stylesheet" type="text/css" href="css/footer.css">
-        <link rel="stylesheet" type="text/css" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="../css/base.css">
+        <link rel="stylesheet" type="text/css" href="../css/font-awesome-4.7.0/css/font-awesome.min.css">
 
-        <link rel="stylesheet" type="text/css" href="css/login.css">
+        <link rel="stylesheet" type="text/css" href="../css/login.css">
     </head>
     <body>
-        <img src="img/logo.png" alt="logo">
+        <img src="../img/logo.png" alt="logo">
         <div class="mainPart">
             <form action="home.html" method="post">
                 <div>
@@ -40,10 +38,14 @@
             </form>
         </div>
         <div>
-            <a href="register.html" class="line">创建新的账户</a>
+            <a href="./register.html" class="line">创建新的账户</a>
         </div>
 
+
         <!--页脚...-->
+        <footer class="footer">
+                © The App All Rights Reserved 2020 京公网安备17307130333号
+        </footer>
 
     </body>
 </html>
