--- a/src/myPhoto.html
+++ b/src/myPhoto.html
@@ -3,34 +3,33 @@
     <head>
         <meta charset="UTF-8">
         <title>我的照片</title>
-        <base href="http://localhost:63342/pj/browser.html?_ijt=k4biajrc272rl3pqfr098hkss7\">
-        <link rel="stylesheet" type="text/css" href="css/base.css">
-        <link rel="stylesheet" type="text/css" href="css/navigationBar.css">
-        <link rel="stylesheet" type="text/css" href="css/footer.css">
-        <link rel="stylesheet" type="text/css" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="../css/base.css">
+        <link rel="stylesheet" type="text/css" href="../css/navigationBar.css">
+        <link rel="stylesheet" type="text/css" href="../css/footer.css">
+        <link rel="stylesheet" type="text/css" href="../css/font-awesome-4.7.0/css/font-awesome.min.css">
 
-        <link rel="stylesheet" type="text/css" href="css/myPhoto.css">
+        <link rel="stylesheet" type="text/css" href="../css/myPhoto.css">
     </head>
     <body>
         <!--导航栏...-->
         <div class="NavigationBar">
             <!--logo-->
             <div>
-                <a href="home.html">
-                    <img src="img/logo.png" alt="logo">
+                <a href="./home.html">
+                    <img src="../img/logo.png" alt="logo">
                 </a>
             </div>
 
             <div class="NavigationBar_left">
                 <ul>
                     <li>
-                        <a href="home.html">首页</a>
+                        <a href="./home.html">首页</a>
                     </li>
                     <li>
-                        <a href="browser.html">浏览页</a>
+                        <a href="./browser.html">浏览页</a>
                     </li>
                     <li>
-                        <a href="search.html">搜索⻚</a>
+                        <a href="./search.html">搜索⻚</a>
                     </li>
                 </ul>
 
@@ -39,10 +38,10 @@
             <div class="NavigationBar_right dropdown highlight">
                 <span class="dropbtn">个⼈中⼼<i class="fa fa-caret-down" aria-hidden="true"></i></span>
                 <div class="dropdown-content">
-                    <a href="upload.html"><i class="fa fa-upload" aria-hidden="true"></i> 上传</a>
-                    <a href="myPhoto.html"><i class="fa fa-picture-o" aria-hidden="true"></i> 我的照⽚</a>
-                    <a href="favor.html"><i class="fa fa-heart" aria-hidden="true"></i> 我的收藏</a>
-                    <a href="login.html"><i class="fa fa-sign-in" aria-hidden="true"></i> 登⼊</a>
+                    <a href="./upload.html"><i class="fa fa-upload" aria-hidden="true"></i> 上传</a>
+                    <a href="./myPhoto.html"><i class="fa fa-picture-o" aria-hidden="true"></i> 我的照⽚</a>
+                    <a href="./favor.html"><i class="fa fa-heart" aria-hidden="true"></i> 我的收藏</a>
+                    <a href="./login.html"><i class="fa fa-sign-in" aria-hidden="true"></i> 登⼊</a>
                 </div>
             </div>
 
@@ -53,8 +52,8 @@
             <div>
                 <!--图片-->
                 <div class="leftPart">
-                    <a href="upload.html">
-                        <img src="img/缩略图.jpg" alt = "缩略图">
+                    <a href="./details.html">
+                        <img src="../img/缩略图.jpg" alt = "缩略图">
                     </a>
                 </div>
                 <!--右边信息-->
@@ -68,7 +67,7 @@
                         即使你没有完全完成任务，我还是会给你⼀个B徽章或者C奖牌，他们也有⼀定的⽤处，但是可能就不能
                         很好的满⾜你的愿望了哟。
                     </p>
-                    <button onclick="window.location.href='upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
+                    <button onclick="window.location.href='./upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
                     <button onclick="alert('图片已删除')"><i class="fa fa-trash" aria-hidden="true" ></i> 删除</button>
                 </div>
                 <div class="clear"></div>
@@ -76,8 +75,8 @@
             <div class="secondsgroup">
                 <!--图片-->
                 <div class="leftPart">
-                    <a href="upload.html">
-                        <img src="img/缩略图.jpg" alt = "缩略图">
+                    <a href="./details.html">
+                        <img src="../img/缩略图.jpg" alt = "缩略图">
                     </a>
                 </div>
                 <!--右边信息-->
@@ -91,7 +90,7 @@
                         即使你没有完全完成任务，我还是会给你⼀个B徽章或者C奖牌，他们也有⼀定的⽤处，但是可能就不能
                         很好的满⾜你的愿望了哟。
                     </p>
-                    <button onclick="window.location.href='upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
+                    <button onclick="window.location.href='./upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
                     <button onclick="alert('图片已删除')"><i class="fa fa-trash" aria-hidden="true" ></i> 删除</button>
                 </div>
                 <div class="clear"></div>
@@ -99,8 +98,8 @@
             <div class="secondsgroup">
                 <!--图片-->
                 <div class="leftPart">
-                    <a href="upload.html">
-                        <img src="img/缩略图.jpg" alt = "缩略图">
+                    <a href="./details.html">
+                        <img src="../img/缩略图.jpg" alt = "缩略图">
                     </a>
                 </div>
                 <!--右边信息-->
@@ -114,7 +113,7 @@
                         即使你没有完全完成任务，我还是会给你⼀个B徽章或者C奖牌，他们也有⼀定的⽤处，但是可能就不能
                         很好的满⾜你的愿望了哟。
                     </p>
-                    <button onclick="window.location.href='upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
+                    <button onclick="window.location.href='./upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
                     <button onclick="alert('图片已删除')"><i class="fa fa-trash" aria-hidden="true" ></i> 删除</button>
                 </div>
                 <div class="clear"></div>
@@ -122,8 +121,8 @@
             <div class="secondsgroup">
                 <!--图片-->
                 <div class="leftPart">
-                    <a href="upload.html">
-                        <img src="img/缩略图.jpg" alt = "缩略图">
+                    <a href="./details.html">
+                        <img src="../img/缩略图.jpg" alt = "缩略图">
                     </a>
                 </div>
                 <!--右边信息-->
@@ -137,7 +136,7 @@
                         即使你没有完全完成任务，我还是会给你⼀个B徽章或者C奖牌，他们也有⼀定的⽤处，但是可能就不能
                         很好的满⾜你的愿望了哟。
                     </p>
-                    <button onclick="window.location.href='upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
+                    <button onclick="window.location.href='./upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
                     <button onclick="alert('图片已删除')"><i class="fa fa-trash" aria-hidden="true" ></i> 删除</button>
                 </div>
                 <div class="clear"></div>
@@ -145,8 +144,8 @@
             <div class="secondsgroup">
                 <!--图片-->
                 <div class="leftPart">
-                    <a href="upload.html">
-                        <img src="img/缩略图.jpg" alt = "缩略图">
+                    <a href="./details.html">
+                        <img src="../img/缩略图.jpg" alt = "缩略图">
                     </a>
                 </div>
                 <!--右边信息-->
@@ -160,7 +159,7 @@
                         即使你没有完全完成任务，我还是会给你⼀个B徽章或者C奖牌，他们也有⼀定的⽤处，但是可能就不能
                         很好的满⾜你的愿望了哟。
                     </p>
-                    <button onclick="window.location.href='upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
+                    <button onclick="window.location.href='./upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
                     <button onclick="alert('图片已删除')"><i class="fa fa-trash" aria-hidden="true" ></i> 删除</button>
                 </div>
                 <div class="clear"></div>
@@ -168,8 +167,8 @@
             <div class="secondsgroup">
                 <!--图片-->
                 <div class="leftPart">
-                    <a href="upload.html">
-                        <img src="img/缩略图.jpg" alt = "缩略图">
+                    <a href="./details.html">
+                        <img src="../img/缩略图.jpg" alt = "缩略图">
                     </a>
                 </div>
                 <!--右边信息-->
@@ -183,7 +182,7 @@
                         即使你没有完全完成任务，我还是会给你⼀个B徽章或者C奖牌，他们也有⼀定的⽤处，但是可能就不能
                         很好的满⾜你的愿望了哟。
                     </p>
-                    <button onclick="window.location.href='upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
+                    <button onclick="window.location.href='./upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
                     <button onclick="alert('图片已删除')"><i class="fa fa-trash" aria-hidden="true" ></i> 删除</button>
                 </div>
                 <div class="clear"></div>
@@ -191,8 +190,8 @@
             <div class="secondsgroup">
                 <!--图片-->
                 <div class="leftPart">
-                    <a href="upload.html">
-                        <img src="img/缩略图.jpg" alt = "缩略图">
+                    <a href="./details.html">
+                        <img src="../img/缩略图.jpg" alt = "缩略图">
                     </a>
                 </div>
                 <!--右边信息-->
@@ -206,7 +205,7 @@
                         即使你没有完全完成任务，我还是会给你⼀个B徽章或者C奖牌，他们也有⼀定的⽤处，但是可能就不能
                         很好的满⾜你的愿望了哟。
                     </p>
-                    <button onclick="window.location.href='upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
+                    <button onclick="window.location.href='./upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
                     <button onclick="alert('图片已删除')"><i class="fa fa-trash" aria-hidden="true" ></i> 删除</button>
                 </div>
                 <div class="clear"></div>
@@ -214,8 +213,8 @@
             <div class="secondsgroup">
                 <!--图片-->
                 <div class="leftPart">
-                    <a href="upload.html">
-                        <img src="img/缩略图.jpg" alt = "缩略图">
+                    <a href="./details.html">
+                        <img src="../img/缩略图.jpg" alt = "缩略图">
                     </a>
                 </div>
                 <!--右边信息-->
@@ -229,7 +228,7 @@
                         即使你没有完全完成任务，我还是会给你⼀个B徽章或者C奖牌，他们也有⼀定的⽤处，但是可能就不能
                         很好的满⾜你的愿望了哟。
                     </p>
-                    <button onclick="window.location.href='upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
+                    <button onclick="window.location.href='./upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
                     <button onclick="alert('图片已删除')"><i class="fa fa-trash" aria-hidden="true" ></i> 删除</button>
                 </div>
                 <div class="clear"></div>
@@ -237,8 +236,8 @@
             <div class="secondsgroup">
                 <!--图片-->
                 <div class="leftPart">
-                    <a href="upload.html">
-                        <img src="img/缩略图.jpg" alt = "缩略图">
+                    <a href="./details.html">
+                        <img src="../img/缩略图.jpg" alt = "缩略图">
                     </a>
                 </div>
                 <!--右边信息-->
@@ -252,7 +251,7 @@
                         即使你没有完全完成任务，我还是会给你⼀个B徽章或者C奖牌，他们也有⼀定的⽤处，但是可能就不能
                         很好的满⾜你的愿望了哟。
                     </p>
-                    <button onclick="window.location.href='upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
+                    <button onclick="window.location.href='./upload.html'"><i class="fa fa-pencil" aria-hidden="true" ></i> 修改</button>
                     <button onclick="alert('图片已删除')"><i class="fa fa-trash" aria-hidden="true" ></i> 删除</button>
                 </div>
                 <div class="clear"></div>
