--- a/src/browser.html
+++ b/src/browser.html
@@ -94,6 +94,25 @@
                     </ul>
                 </div>
             </div>
+
+            <!--热⻔内容快速浏览-->
+            <div>
+                <div class="left-2-1">
+                    热⻔内容快速浏览
+                </div>
+                <div class="left-2-2">
+                    <ul>
+                        <li><a onclick="alert('图⽚已刷新')">风景</a></li>
+                        <li><a onclick="alert('图⽚已刷新')">城市</a></li>
+                        <li><a onclick="alert('图⽚已刷新')">人文</a></li>
+                        <li><a onclick="alert('图⽚已刷新')">动物</a></li>
+                        <li><a onclick="alert('图⽚已刷新')">建筑</a></li>
+                        <li><a onclick="alert('图⽚已刷新')">特色</a></li>
+                        <li><a onclick="alert('图⽚已刷新')" class="last">奇迹</a></li>
+                    </ul>
+                </div>
+            </div>
+
         </aside>
 
         <!--右边主区域-->
