change post into get(solve the git-web-page problem)

--- a/src/browser.html
+++ b/src/browser.html
@@ -51,7 +51,7 @@
         <aside>
             <!--标题浏览-->
             <div class="left-1">
-                <form name="form1" action="" method="post">
+                <form name="form1" action="" method="get">
                     <label>
                         <input name="text1" type="text" placeholder="请输入标题进行搜索">
                         <button type="submit" onclick="alert('图⽚已刷新')"><i class="fa fa-search" aria-hidden="true"></i> </button>
