--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <img src="./img/logo.png" alt="logo">
         <div class="mainPart">
-            <form action="./src/home.html" method="post">
+            <form action="./src/home.html" method="get">
                 <div>
                     <p>
                         <label>
