--- a/src/login.html
+++ b/src/login.html
@@ -11,7 +11,7 @@
     <body>
         <img src="../img/logo.png" alt="logo">
         <div class="mainPart">
-            <form action="home.html" method="post">
+            <form action="home.html" method="get">
                 <div>
                     <p>
                         <label>
