--- a/src/register.html
+++ b/src/register.html
@@ -11,7 +11,7 @@
     <body>
         <img src="../img/logo.png" alt="logo">
         <div class="mainPart">
-            <form action="login.html" method="post">
+            <form action="login.html" method="get">
             <div>
                 <p>
                     <label>
